--- a/tduck-api/Dockerfile
+++ b/tduck-api/Dockerfile
@@ -2,6 +2,6 @@ FROM java:8
 EXPOSE 8999
 
 VOLUME /tmp
-ADD tduck-api.jar /app.jar
+ADD target/tduck-api.jar /app.jar
 RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java","-jar","/app.jar"]
