--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <hutool.version>5.1.2</hutool.version>
         <aliyun-oss.sdk.vesion>3.8.0</aliyun-oss.sdk.vesion>
         <qiniu-oss.version>[7.2.0, 7.2.99]</qiniu-oss.version>
+        <upyun.version>4.2.2</upyun.version>
         <velocity.version>1.7</velocity.version>
         <wx-java-mp.version>3.9.0</wx-java-mp.version>
         <knife4j.version>3.0.1</knife4j.version>
@@ -160,6 +161,12 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+            <!--又拍云-->
+            <dependency>
+                <groupId>com.upyun</groupId>
+                <artifactId>java-sdk</artifactId>
+                <version>${upyun.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
