--- a/tduck-storage/pom.xml
+++ b/tduck-storage/pom.xml
@@ -34,5 +34,9 @@
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.upyun</groupId>
+            <artifactId>java-sdk</artifactId>
+        </dependency>
     </dependencies>
 </project>
