--- a/tduck-api/src/main/resources/application.yml
+++ b/tduck-api/src/main/resources/application.yml
@@ -14,7 +14,13 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 100MB
-
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    # 当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移
+    baseline-on-migrate: true
+    # 是否允许无序的迁移 开发环境最好开启, 生产环境关闭
+    out-of-order: true
 
 
 server:
@@ -47,8 +53,8 @@ mybatis-plus:
 
 #  请求日志是否打印
 platform:
-#  request:
-#    trace-log: true
+  request:
+    trace-log: true
   sign:
     enable: true
     secret: 916lWh2WMcbSWiHv
