升级滑动验证码

--- a/tduck-api/src/main/resources/application.yml
+++ b/tduck-api/src/main/resources/application.yml
@@ -46,7 +46,7 @@ mybatis-plus:
 #  请求日志是否打印
 platform:
   request:
-    trace-log: true
+    trace-log: false
   sign:
     enable: true
     secret: 916lWh2WMcbSWiHv
@@ -76,5 +76,5 @@ platform:
 
 aj:
   captcha:
+    enable: true
     water-mark: tduck
-
