--- a/tduck-api/pom.xml
+++ b/tduck-api/pom.xml
@@ -53,8 +53,8 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.github.anji-plus</groupId>
-            <artifactId>captcha-spring-boot-starter</artifactId>
+            <groupId>com.anji-plus</groupId>
+            <artifactId>spring-boot-starter-captcha</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
