--- a/pom.xml
+++ b/pom.xml
@@ -15,21 +15,21 @@
         <spring-boot.version>2.3.5.RELEASE</spring-boot.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <mybatis.plus.version>3.4.1</mybatis.plus.version>
-        <guava.version>26.0-jre</guava.version>
-        <commons.lang3.vesrion>3.7</commons.lang3.vesrion>
-        <commons.io.version>2.6</commons.io.version>
+        <mybatis.plus.version>3.4.3</mybatis.plus.version>
+        <guava.version>30.1.1-jre</guava.version>
+        <commons.lang3.vesrion>3.12.0</commons.lang3.vesrion>
+        <commons.io.version>2.9.0</commons.io.version>
         <commons.configuration.version>1.10</commons.configuration.version>
-        <jwt.version>0.9.0</jwt.version>
-        <hutool.version>5.1.2</hutool.version>
-        <aliyun-oss.sdk.vesion>3.8.0</aliyun-oss.sdk.vesion>
+        <jwt.version>0.9.1</jwt.version>
+        <hutool.version>5.6.6</hutool.version>
+        <aliyun-oss.sdk.vesion>3.12.0</aliyun-oss.sdk.vesion>
         <qiniu-oss.version>[7.2.0, 7.2.99]</qiniu-oss.version>
         <upyun.version>4.2.2</upyun.version>
         <velocity.version>1.7</velocity.version>
         <wx-java-mp.version>3.9.0</wx-java-mp.version>
-        <knife4j.version>3.0.1</knife4j.version>
+        <knife4j.version>3.0.2</knife4j.version>
         <jwt.version>0.7.0</jwt.version>
-        <weixin-java.version>4.0.0</weixin-java.version>
+        <weixin-java.version>4.1.0</weixin-java.version>
         <captcha.version>1.2.8</captcha.version>
         <fastjson.version>1.2.75</fastjson.version>
         <tencentcloud.version>4.0.11</tencentcloud.version>
@@ -179,7 +179,7 @@
         <repository>
             <id>public</id>
             <name>aliyun nexus</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -190,7 +190,7 @@
         <pluginRepository>
             <id>public</id>
             <name>aliyun nexus</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <url>https://maven.aliyun.com/nexus/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
