--- a/tduck-project/pom.xml
+++ b/tduck-project/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>tduck-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.tduck</groupId>
+            <artifactId>tduck-storage</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
