--- a/tduck-api/src/main/resources/application.yml
+++ b/tduck-api/src/main/resources/application.yml
@@ -48,7 +48,7 @@ platform:
   request:
     trace-log: false
   sign:
-    enable: true
+    enable: false
     secret: 916lWh2WMcbSWiHv
     ignore-urls:
       - /tduck-api/webjars/**
