修复文件本地存储405问题

--- a/tduck-api/src/main/resources/application.yml
+++ b/tduck-api/src/main/resources/application.yml
@@ -48,7 +48,7 @@ platform:
   request:
     trace-log: true
   sign:
-    enable: false
+    enable: true
     secret: 916lWh2WMcbSWiHv
     ignore-urls:
       - /tduck-api/webjars/**
@@ -62,6 +62,7 @@ platform:
       - /tduck-api/user/file/upload
       - /tduck-api/project/file/upload/**
       - /tduck-api/wx/mp/portal/**
+      - /tduck-api/u/**
       - /**/*.js
       - /**/*.css
       - /**/*.png
