去除微信相关接口签名校验

--- a/tduck-api/src/main/resources/application.yml
+++ b/tduck-api/src/main/resources/application.yml
@@ -63,6 +63,7 @@ platform:
       - /tduck-api/project/file/upload/**
       - /tduck-api/wx/mp/portal/**
       - /tduck-api/u/**
+      - /tduck-api/wx/**
       - /**/*.js
       - /**/*.css
       - /**/*.png
