更新默认 application-prod.yml

--- a/tduck-api/src/main/resources/application-prod.yml
+++ b/tduck-api/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/tduck-v3?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&tinyInt1isBit=false
+    url: jdbc:mysql://localhost:3306/tduck?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&tinyInt1isBit=false
     username: root
     password: root
     type: com.zaxxer.hikari.HikariDataSource
