--- a/tduck-form/pom.xml
+++ b/tduck-form/pom.xml
@@ -37,5 +37,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tduck</groupId>
+            <artifactId>tduck-webhook</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
