--- a/tduck-common/pom.xml
+++ b/tduck-common/pom.xml
@@ -88,6 +88,16 @@
             <artifactId>ehcache</artifactId>
             <version>2.9.1</version><!--$NO-MVN-MAN-VER$ -->
         </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.977</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java-common</artifactId>
+            <version>3.1.977</version>
+        </dependency>
 
 
 
