--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
         <fastjson.version>2.0.26</fastjson.version>
         <tencentcloud.version>4.0.11</tencentcloud.version>
         <poi.version>5.1.0</poi.version>
+        <okhttp3.version>4.11.0</okhttp3.version>
+        <okio.version>3.5.0</okio.version>
+
     </properties>
 
     <modules>
@@ -173,6 +176,16 @@
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-s3</artifactId>
                 <version>${aws-java-sdk-s3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okio</groupId>
+                <artifactId>okio</artifactId>
+                <version>${okio.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
